# master-thesis-project

./: .env.example  .gitignore  AGENTS.md  CONFIG.md  README.md  pyproject.toml
artifacts/: README.md
bugs/: README.md
bugs/catalogs/: dg_BUG_CLASSIFICATION.md  dg_external_tracking_20260405.md  dg_final_counting_decision_20260405.md  dg_paper_bug_catalog.csv  dg_recheck_classification_20260402.csv  dg_recheck_classification_20260402.md  frama_bug_classification.csv  frama_external_tracking_20260405.md  frama_paper_master_table.csv  overall_counting_options.csv
bugs/dg/N01-CSMITH-CONSTEXPR-MISSING-VALUE/: 27_csmith_constexpr_missing_value_37.bc  27_csmith_constexpr_missing_value_37.orig  27_csmith_constexpr_missing_value_37.sliced.bc  28_csmith_constexpr_missing_value_68.bc  28_csmith_constexpr_missing_value_68.orig  29_csmith_constexpr_missing_value_80.bc  (+2 more)
bugs/frama/: BUG_CLASSIFICATION.md  BUG_REPORT.md  ISSUE_011_013_RECHECK_2026-03-09.md  ISSUE_SUBMISSION_DRAFT_pipi9221.md  README.md  SLICE_ONE_SHOT_CONFIRMED_BUGS_2026-03-09_EN.md  TRAE.md
docs/methodology/: experiment-protocol.md  sa-bugs-comparison.md
docs/plans/: 2026-03-29-normalize-site-selection-plan.md  2026-03-29-seed-source-pipeline-plan.md  2026-06-16-llm-online-seed-and-screening-pipeline.md
docs/specs/: mr2-mr3-ast-mutator.md  spec.md
experiment/: run_batch.sh
experiment/mr2/: README.md
experiment/mr3/: README.md
src/common/: README.md  __init__.py  criteria.py  metadata.py  runner.py  tool_paths.py  validation.py
src/mutators/: README.md  __init__.py  backend.py
src/oracles/: __init__.py  base.py  dg_evidence.py  dg_oracle.py  frama.py  frama_oracle.py  judges.py  llm_judge.py  observation.py  set_extractors.py
src/pipeline/: __init__.py  batch_controller.py  generate_mutants.py  run_experiment.py  run_oracle.py
src/seeds/: __init__.py  base.py  creal.py  criteria.py  csmith.py  llm_feature_checker.py  llm_files.py  llm_online.py  llm_prompts.py  models.py  smart_criteria.py
src/slicers/: __init__.py  base.py  dg.py  frama.py
src/validators/: README.md  __init__.py  behavior.py  compile_validator.py
tests/fixtures/: README.md  fake_creal.py  fake_csmith.py  fake_frama.py  fake_llm.py  fake_llm_flaky.py  fake_llm_judge.py  mr2_criteria.json  mr2_seed.c  mr3_criteria.json  mr3_seed.c  normalize_seed.c  site_discovery_seed.c
tests/integration/: README.md  test_generate_mutants_pipeline.py  test_llm_online_pipeline.py  test_mutate_mr2.py  test_mutate_mr3.py  test_normalize.py  test_run_experiment_pipeline.py  test_run_oracle_dg.py  test_run_oracle_dg_llm_judge.py  test_run_oracle_dg_matrix.py  test_run_oracle_frama.py  test_run_oracle_frama_matrix.py  test_site_discovery.py
tests/support/: wsl_paths.py
tests/unit/: README.md  test_batch_controller.py  test_behavior_validator.py  test_compile_validator.py  test_criteria_spec.py  test_dg_adapter.py  test_dg_evidence.py  test_frama_adapter.py  test_frama_value_oracle.py  test_llm_feature_checker.py  test_llm_online_seed_source.py  test_llm_prompts.py  test_metadata.py  test_mr_judges.py  test_prerequisite_checks.py  test_seed_review_status.py  test_seed_sources.py  test_slicing_models.py  test_smart_criteria.py  test_tooling_backend.py  test_wsl_path_helpers.py
tooling/: CMakeLists.txt  README.md  deepseek_client.py  deepseek_judge.py  test_dg_bugs.py  test_frama_bugs.py  test_mr1_bug_detection.py
tooling/include/: README.md
tooling/src/: README.md  main.cpp
(+988 files in other folders)
