[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mr2-mr3-ast-mutator"
version = "0.1.0"
description = "Research prototype for MR2/MR3 AST mutation orchestration."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["common*", "mutators*", "validators*", "seeds*", "pipeline*"]
